# malkovri

./: LICENSE  README.md
malkovri_wgsl_debugger/: .gitignore  Cargo.toml  README.md
malkovri_wgsl_debugger/core/: Cargo.toml
malkovri_wgsl_debugger/core/src/: error.rs  eval_binary.rs  eval_cast.rs  eval_expressions.rs  eval_math.rs  evaluator.rs  function_state.rs  lib.rs  primitive.rs  value.rs  wgsl.rs
malkovri_wgsl_debugger/dap/: Cargo.toml
malkovri_wgsl_debugger/dap/src/: debug_adapter.rs  error.rs  main.rs
malkovri_wgsl_debugger/test_shaders/: test_control_flow.wgsl  test_expressions.wgsl
malkovri_wgsl_debugger/vscode_extension/: CHANGELOG.md  package.json
malkovri_wgsl_debugger/vscode_extension/src/: extension.ts
